force-app/main/default/objects/Order_Location__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <label>Total Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>